--- a/assets/common/css/main.css
+++ b/assets/common/css/main.css
@@ -44,6 +44,9 @@ tr td:last-child{
 tr:hover {
     background: #eee;
 }
+tr.fixed-row:hover {
+    background: #fff;
+}
 
 
 tr:hover td:last-child{
